tests/fail/elaboration/unsolved/hole.snap
stdout = '''
?woopsie : ?0
'''
stderr = '''
error: failed to infer hole expression
  ┌─ tests/fail/elaboration/unsolved/hole.fathom:3:1
  │
3 │ ?woopsie
  │ ^^^^^^^^ unsolved hole expression

'''
